system/traefik/resources/whoami/resources/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: whoami

spec:
  replicas: 1
  selector:
    matchLabels:
      app: whoami
  template:
    metadata:
      labels:
        app: whoami
    spec:
      containers:
        - name: app
          image: containous/whoami
          ports:
            - containerPort: 80
