system/traefik/resources/whoami/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: whoami

spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: whoami
